<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/tan_background"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtNumbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers"

        />

    <TextView
        android:id="@+id/txtFamily"
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:text="@string/category_family"

        />

    <TextView
        android:id="@+id/txtColors"
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:text="@string/category_colors"

        />

    <TextView
        android:id="@+id/txtPhrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_phrases"

        />

    <TextView
        android:id="@+id/txtAnimals"
        style="@style/CategoryStyle"
        android:background="@color/category_animals"
        android:text="@string/category_animals" />

</LinearLayout>